--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -25,6 +25,16 @@
     flex-wrap: wrap;
 }
 
+@media screen and (max-width: 768px) {
+    #whoWeare {
+        padding-top: 109px;
+        position: relative;
+        top: -90px;
+    }
+}
+
+
+
 a{
     text-decoration: none!important;
 }
@@ -46,11 +56,14 @@ header{
 }
 
 .my-login-page .card-wrapper {
-    width: 743px;
+    /* width: 743px; */
     height: 100% !important;
 	
 }
 nav{
+    margin: auto;
+    align-items: center;
+    max-width: 1120px;
     padding: 1rem 2rem 2rem  !important;
     background: var(--sky);
     position: relative;
@@ -74,18 +87,24 @@ nav .nav-items{
 }
 
 nav .nav-items .nav-link{
-    padding: 1.3rem 2rem;
+    padding: 1.3rem 1rem;
     font-family: var(--livvic);
     font-size: 14px;
 }
+
 footer{
+    display: flex;
+
+    max-width: 1120px;
+    align-items: center;
     justify-content: space-between;
     background-color: #ffffff;
+    margin: auto;
   }
 
 .footer-list li{
     display: inline-block;
-    padding: 10px !important;
+    padding: 10px 0px 10px 32px  !important;
     list-style-type: none;
     font-family: var(--livvic);
     font-size: 14px;
