--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,16 +2,32 @@
   background-color: #fff5f2;
 }
 
+#whoWeare{
+  padding-top: 109px;
+}
+#about-us{
+  padding-top: 172px;
+}
 .right-w{
+  padding-left: 147px !important;
   padding-top: 200px;
 }
-.about-left{
+/* .about-left{
   padding-top: 129px;
+} */
+.about-left h2 {
+  margin-bottom: 26px;
 }
-.about-right{
+/* .about-right{
+  margin-top: 26px;
   padding-top: 78px;
+} */
+.about-right img{
+  margin-top: 46px;
 }
 .left-w{
+  max-width: 497px;
+ 
   padding-bottom: 105px;
 }
 .right-w h2{
@@ -19,7 +35,9 @@
   margin-bottom: 40px;
 }
 .right-w p{
-text-align: left;}
+text-align: left;
+margin-bottom: 86px;
+}
 
 .right-w a{
 border:  1px solid #162c9b;
@@ -29,7 +47,7 @@ color: #162c9b;
 }
 .more{
   text-align: center;
-  background-color: #fff5f2;
+ 
 }
 footer{
   display: flex;
@@ -118,6 +136,16 @@ footer{
   position: relative;
   border-radius: 6px;
 }
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .right-w{
+    padding-left: 20px!important;
+    padding-right: 20px  !important;
+  }
+  
+  /* Full-width containers */
+  
+  }
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
@@ -129,14 +157,15 @@ footer{
   /* Full-width containers */
   .container-t {
   width: 100%;
-  padding-left: 70px;
+  padding-left: 25px;
   padding-right: 25px;
   }
+  
   
   /* Make sure that all arrows are pointing leftwards */
   .container-t::before {
   left: 60px;
-  border: medium solid white;
+  /* border: medium solid white; */
   border-width: 10px 10px 10px 0;
   border-color: transparent white transparent transparent;
   }
@@ -152,12 +181,13 @@ footer{
   }
 }
 #time-l h3{
-  margin-top: 400px;
+  padding-top: 46px;
+  margin-top: 163px;
   text-align: center;
 }
 #time-l p{
-  text-align: center;
-  margin-top:24px;
+  text-align: left;
+  /* margin-top:24px; */
 
 }
 
@@ -165,6 +195,13 @@ footer{
   .right-w {
     padding-top: 20px;
     padding-bottom: 20px;
+}
+.nav-link{
+  padding-left: 0px!important;
+}
+.sign{
+  text-align: center;
+  padding-right: 20px!important;
 }
   }
 
@@ -175,3 +212,18 @@ footer{
   #more-on-us-text{
     padding-bottom: 148px;
   }
+
+ #time-l{
+  background-color: #fff5f2;
+ }
+
+ @media screen  and (max-width: 768px) {
+  .text-work{
+    margin-left: 0!important;
+  }
+}
+
+.works-img{
+  width: 70px;
+  height: 70px;
+}
