--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -29,13 +29,26 @@
     #whoWeare {
         padding-top: 109px;
         position: relative;
-        top: -90px;
+    }
+  
+}
+@media screen and (max-width:767px){
+    .navbar{
+        display: block !important;
+    }
+    ul{
+        padding-left: 0px!important;
+    }
+    ul li a{
+        padding-left: 0!important;
     }
 }
 
+nav ul li a {
+    text-decoration: none;
+}
 
-
-a{
+.nav-link a{
     text-decoration: none!important;
 }
 
@@ -43,10 +56,10 @@ a{
     color: var(--bg-color);
 }
 
-header{
+/* header{
     background: var(--sky);
 
-}
+} */
 
 @media screen and (max-width: 425px) {
 	.my-login-page .card-wrapper {
@@ -60,7 +73,7 @@ header{
     height: 100% !important;
 	
 }
-nav{
+/* nav{
     margin: auto;
     align-items: center;
     max-width: 1120px;
@@ -90,11 +103,10 @@ nav .nav-items .nav-link{
     padding: 1.3rem 1rem;
     font-family: var(--livvic);
     font-size: 14px;
-}
+} */
 
 footer{
     display: flex;
-
     max-width: 1120px;
     align-items: center;
     justify-content: space-between;
@@ -120,14 +132,17 @@ footer{
 #all-rights{
     padding: 10px;
 }
-nav .nav-items .nav-link:hover a{
+/* .nav-link a{
+    text-decoration: none !important;
+} */
+/* nav .nav-items .nav-link:hover a{
     color: #2439a0;
-}
+} */
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
     display: block;
   }
 
-.sign{
+/* .sign{
     color: #162c9b;
     padding: 1rem 1rem !important;
 }
@@ -155,10 +170,10 @@ nav .toggle-collapse .toggle-icons i{
 
 .collapse{
     height: 30rem;
-}
+} */
 
 /* creating own toggle icons  */
-.icon, .icon::before, .icon::after{
+/* .icon, .icon::before, .icon::after{
     position: relative;
     width: 10px;
     border: 2px solid var(--text-gray);
@@ -189,10 +204,10 @@ nav .toggle-collapse .toggle-icons i{
 
 .toggle-click::before{
     left: -2px;
-}
+} */
 
 
-
+/* 
 @media only screen and (max-width: 800px){
     nav .nav-items{
         flex-direction: column;
@@ -211,7 +226,7 @@ nav .toggle-collapse .toggle-icons i{
         padding-left: 0px  !important;
     }
 
-}
+} */
 .upload{
     max-width: 204px;
 }
@@ -234,3 +249,212 @@ nav .toggle-collapse .toggle-icons i{
     cursor: inherit;
     display: block;
   }
+
+
+    *, *::before, *::after {
+	 padding: 0;
+	 margin: 0;
+	 box-sizing: border-box;
+	 list-style: none;
+	 list-style-type: none;
+	 text-decoration: none;
+	 -moz-osx-font-smoothing: grayscale;
+	 -webkit-font-smoothing: antialiased;
+	 text-rendering: optimizeLegibility;
+}
+ body {
+	 font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	 font-size: 1rem;
+	 font-weight: normal;
+	 line-height: 1.5;
+	 color: #252a32;
+	 background: #f1f5f8;
+}
+ img {
+	 display: block;
+	 height: auto;
+}
+
+ .container {
+	 max-width: 80rem;
+	 width: 100%;
+	 height: auto;
+	 padding: 0 2rem;
+	 margin: 0 auto;
+}
+ .brand {
+	 font-family: inherit;
+	 font-size: 1.75rem;
+	 font-weight: 700;
+	 line-height: inherit;
+	 color: #148cb8;
+	 text-transform: uppercase;
+	 text-rendering: optimizeLegibility;
+}
+ .navbar {
+	 max-width: 1120px;
+	 width: 100%;
+	 height: auto;
+	 padding: 1rem 2rem;
+	 color: #373F41;
+	 background: #FFF5F2;
+}
+header{
+	background: #FFF5F2;
+
+}
+ @media only screen and (min-width: 768px) {
+	 .navbar {
+		 flex-direction: row;
+		 justify-content: space-between;
+		 align-items: center;
+		 margin: 0 auto;
+	}
+}
+ .navbar .navbrand {
+	 display: flex;
+	 flex-direction: row;
+	 justify-content: space-between;
+	 align-items: center;
+}
+ .navbar .navbrand .burger {
+	 display: flex;
+	 flex-direction: row;
+	 justify-content: center;
+	 align-items: center;
+	 cursor: pointer;
+	 border: none;
+	 outline: none;
+	 background: none;
+	 transition: all 0.35s ease;
+}
+ .navbar .navbrand .burger-close {
+	 display: none;
+}
+ .navbar .navbrand .burger.active .burger-open {
+	 display: none;
+}
+ .navbar .navbrand .burger.active .burger-close {
+	 display: flex;
+}
+ @media only screen and (min-width: 768px) {
+	 .navbar .navbrand .burger {
+		 display: none;
+	}
+}
+ .navbar .menu {
+	 width: 100%;
+	 height: 0;
+	 overflow: hidden;
+	 transition: all 0.5s ease;
+}
+ .navbar .menu-item {
+	 color: #373F41  !important;
+	 margin: 0.5rem 0;
+}
+ .navbar .menu-link {
+	 font-family: inherit;
+	 font-size: 14px;
+	 font-weight: 600;
+	 line-height: inherit;
+	 text-rendering: optimizeLegibility;
+	 transition: all 0.35s ease;
+	 padding: 15px;
+}
+.navbar .menu-link:hover  {
+	color: #162C9B !important;
+}
+
+ .navbar .menu.active {
+	 width: 100%;
+	 height: 12rem;
+	 margin: 1rem 0;
+}
+ @media only screen and (min-width: 768px) {
+	 .navbar .menu {
+		 display: flex;
+		 flex-direction: row;
+		 justify-content: center;
+		 align-items: center;
+		 height: auto;
+         padding-top: 15px;
+	}
+	 .navbar .menu-item {
+		 padding: 0;
+		 /* margin: 0 0.5rem; */
+	}
+}
+ .navbar .social {
+	 display: none;
+	 flex-direction: row;
+	 justify-content: center;
+	 align-items: center;
+}
+ .navbar .social-item {
+	 font-size: 1.65rem;
+	 line-height: inherit;
+	 margin: 0 0.5rem;
+	 color: #252a32;
+	 transition: all 0.35s ease;
+}
+
+ @media only screen and (min-width: 768px) {
+	 .navbar .social {
+		 display: flex;
+	}
+}
+
+.sign{
+	padding: 10px 12px;
+	color: #162C9B!important;
+}
+
+.signup{
+    color: white;
+    padding: 10px 12px ;
+    background-color: #162C9B;
+}
+    /* .sign:hover{
+        color: white !important;
+        background-color: #162C9B;
+    } */
+.sign-mid{
+    color: #162C9B;
+	padding-left: 15px;
+    text-decoration: none!important;
+}
+.first a{
+    text-decoration: none;
+}
+.second  a {
+    text-decoration: none;
+}
+footer ul li a{
+    text-decoration: none;
+}
+.first{
+	display: none  !important;
+}
+.sign-mid:hover{
+		color: white !important;
+		background-color: #162C9B ;
+	}
+
+@media only screen and (max-width: 768px){
+	.first{
+		padding: 5px;
+        padding-left: 0px;
+		display: block !important;
+		max-width: 100px;
+	}
+	
+	.second{
+		display: none;
+	}
+}
+ .middle:hover{
+color: #162C9B!important;
+ }
+nav ul li a{
+    color: #252a32;
+}
