--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,14 @@
-#whoWeare{
+#whoWeare {
   background-color: #fff5f2;
 }
 
-#whoWeare{
+#whoWeare {
   padding-top: 109px;
 }
-#about-us{
+#about-us {
   padding-top: 172px;
 }
-.right-w{
+.right-w {
   padding-left: 147px !important;
   padding-top: 200px;
 }
@@ -22,47 +22,45 @@
   margin-top: 26px;
   padding-top: 78px;
 } */
-.about-right img{
+.about-right img {
   margin-top: 46px;
 }
-.left-w{
+.left-w {
   max-width: 497px;
- 
+
   padding-bottom: 105px;
 }
-.right-w h2{
-
+.right-w h2 {
   margin-bottom: 40px;
 }
-.right-w p{
-text-align: left;
-margin-bottom: 86px;
+.right-w p {
+  text-align: left;
+  margin-bottom: 86px;
 }
 
-.right-w a{
+/* .right-w a{
 border:  1px solid #162c9b;
 padding:12px 46px 12px 22px;
 color: #162c9b;
 
-}
-.more{
+} */
+.more {
   text-align: center;
- 
 }
-footer{
-  display: flex;
+footer {
+  /* display: flex; */
   justify-content: space-between;
 }
 /* Timeline */
 .timeline {
   position: relative;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: 0 15%;
 }
 
 /* The actual timeline (the vertical ruler) */
 .timeline::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 6px;
   top: 0;
@@ -81,7 +79,7 @@ footer{
 
 /* The circles on the timeline */
 .container-t::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 25px;
   height: 25px;
@@ -138,92 +136,97 @@ footer{
 }
 @media screen and (max-width: 600px) {
   /* Place the timelime to the left */
-  .right-w{
-    padding-left: 20px!important;
-    padding-right: 20px  !important;
+  .right-w {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
   }
-  
+
   /* Full-width containers */
-  
-  }
+}
 
 /* Media queries - Responsive timeline on screens less than 600px wide */
 @media screen and (max-width: 600px) {
   /* Place the timelime to the left */
   .timeline::after {
-  left: 31px;
+    left: 31px;
   }
-  
+
   /* Full-width containers */
   .container-t {
-  width: 100%;
-  padding-left: 25px;
-  padding-right: 25px;
+    width: 100%;
+    padding-left: 25px;
+    padding-right: 25px;
   }
-  
-  
+
   /* Make sure that all arrows are pointing leftwards */
   .container-t::before {
-  left: 60px;
-  /* border: medium solid white; */
-  border-width: 10px 10px 10px 0;
-  border-color: transparent white transparent transparent;
+    left: 60px;
+    /* border: medium solid white; */
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
   }
 
   /* Make sure all circles are at the same spot */
-  .left::after, .right::after {
-  left: 15px;
+  .left::after,
+  .right::after {
+    left: 15px;
   }
-  
+
   /* Make all right containers behave like the left ones */
   .right {
-  left: 0%;
+    left: 0%;
   }
 }
-#time-l h3{
+#time-l h3 {
   padding-top: 46px;
   margin-top: 163px;
   text-align: center;
 }
-#time-l p{
+#time-l p {
   text-align: left;
   /* margin-top:24px; */
-
 }
 
 @media screen and (max-width: 768px) {
   .right-w {
     padding-top: 20px;
     padding-bottom: 20px;
-}
-.nav-link{
+  }
+  /* .nav-link{
   padding-left: 0px!important;
+} */
+  .sign {
+    text-align: center;
+    padding-right: 20px !important;
+  }
 }
-.sign{
-  text-align: center;
-  padding-right: 20px!important;
+
+#more-on-us {
+  padding-top: 68px;
 }
-  }
 
-  #more-on-us{
-    padding-top:68px ;
-  }
+#more-on-us-text {
+  padding-bottom: 148px;
+}
 
-  #more-on-us-text{
-    padding-bottom: 148px;
-  }
-
- #time-l{
+#time-l {
   background-color: #fff5f2;
- }
+}
 
- @media screen  and (max-width: 768px) {
-  .text-work{
-    margin-left: 0!important;
+@media screen and (max-width: 768px) {
+  .container-t .content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  .text-work {
+    margin: auto !important;
+    margin-left: 15px !important;
   }
 }
 
-.works-img{
+.works-img {
   width: 70px;
   height: 70px;
 }
