--- a/assets/css/message.css
+++ b/assets/css/message.css
@@ -284,3 +284,10 @@ h1,p{
 h1{
     margin-top: 78px;
 }
+
+footer ul li a:hover{
+    text-decoration: none;
+}
+nav ul li a:hover{
+    text-decoration: none;
+}
